[project]
name = "chrch_rltr_UV"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.11.5",
]
prod = [
    "uvicorn>=0.34.0",
    "whitenoise>=6.9.0",
]
